{
    "name": "InputMap",
    "maps": [
        {
            "name": "MenuActions",
            "id": "d832b73c-28a6-4a89-b02a-328ce3e9e2f8",
            "actions": [
                {
                    "name": "Action1",
                    "type": "Button",
                    "id": "34ce96b1-5eef-4c0a-b394-b8054836fa55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Action2",
                    "type": "Button",
                    "id": "dbf613ff-aa76-49c0-a9eb-cc46641da0eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Action3",
                    "type": "Button",
                    "id": "2fd61400-a74c-4f1c-be4c-454bd322a656",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Action4",
                    "type": "Button",
                    "id": "beceba53-62b7-4d2d-b18d-ac6bf83cbb2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "800625b2-c9a7-473e-abf9-bcd9384a9b19",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadN",
                    "type": "Button",
                    "id": "d7273272-106b-4364-a873-92250c968fee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadS",
                    "type": "Button",
                    "id": "88a65589-05c6-41f4-92b1-e053f2069d64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadE",
                    "type": "Button",
                    "id": "bafe9f6b-1b55-4654-bad3-8f5f615fd033",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadW",
                    "type": "Button",
                    "id": "fa1ca787-95ed-4990-b6cb-015d616a3a8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fBumperRight",
                    "type": "Button",
                    "id": "43cd3b7d-71ca-42a7-95f9-3452c4979d0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fBumperLeft",
                    "type": "Button",
                    "id": "3d1f91c9-eb0b-4b14-aad2-45ab7d40a5bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "bBumperRight",
                    "type": "Button",
                    "id": "3d17db4a-0fb6-4094-b8aa-014a19079a97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "bBumperLeft",
                    "type": "Button",
                    "id": "7ab16630-778e-4e3c-b200-d50c1791ea29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Options",
                    "type": "Button",
                    "id": "530226a6-fb37-4e1d-a5ec-91b38bd8d436",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2bb5fffc-6264-412f-ac6b-529134e0fadc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ca3712-466d-49e3-93d2-a46b2105b185",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "561c02ff-6402-4b86-aa27-a2e27d2a2a27",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bda3a4f-c327-45a6-b180-fe5d34913b77",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "743c3f2a-209a-4543-a515-7d86c3a57354",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c19a30f-bd13-4210-822c-19e1c62df1cf",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e6c6969-ce9a-4689-a1b8-b51147838a3f",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2373f28e-4ab1-407d-901d-d16f78582fa0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f813fee9-cac7-42f5-9573-a5eefb7682a3",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cd34882-c53b-4285-ace6-e0759cc24e9e",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fBumperRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36470bc3-257f-4a32-8d1c-4d11a060c01d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fBumperLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c74ff00-ec26-4a58-87d2-a14207be91aa",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "bBumperRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db856420-67e5-4841-90de-7c6f6e7182d3",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "bBumperLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f7e1130-3292-43d4-8d5d-5ca955e23748",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Options",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "In-Game",
            "id": "20e39856-5714-45cb-be5e-120b1a9b929f",
            "actions": [
                {
                    "name": "SouthAction",
                    "type": "Button",
                    "id": "400452d2-9955-458b-b6b6-dba7fc0e6171",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NorthAction",
                    "type": "Button",
                    "id": "b0facceb-f56d-48a7-afe3-721687ff48fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EastAction",
                    "type": "Button",
                    "id": "74e94950-81f5-4808-9d9e-d0451ac4ed2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WestAction",
                    "type": "Button",
                    "id": "887ba03f-ea64-41e3-9810-5f86ccd8e724",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftFrontBumper",
                    "type": "Button",
                    "id": "abe7e68e-e205-469b-84f4-4716b2e8f0f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftBackBumper",
                    "type": "Button",
                    "id": "9af65ecd-1a21-4787-948e-bf07280ec2a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightFrontBumper",
                    "type": "Button",
                    "id": "ac5cfebf-a16c-4f3f-a1d0-c9f06cd0565b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightBackBumper",
                    "type": "Button",
                    "id": "f69a8af6-85e2-4850-803b-6da4bbdb0828",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadSouth",
                    "type": "Button",
                    "id": "99fe82e1-84df-403a-9d1f-efba79a1cc5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadNorth",
                    "type": "Button",
                    "id": "6b2e7cfd-cbc4-4706-bb6d-96af5633d175",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadEast",
                    "type": "Button",
                    "id": "858ee353-be6e-4928-a5e3-a95dea717d39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadWest",
                    "type": "Button",
                    "id": "e5469acc-f956-402e-aba0-e9777eaec733",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Options",
                    "type": "Button",
                    "id": "15df676f-4313-41de-9303-5c751b985d32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c488315-7927-42c7-8c92-2ac6957be61b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32376a68-f3bb-45f3-ba1b-4c54fcb9858b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7285d1f0-4bf8-4435-a2a0-33f72f3f3d32",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EastAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e326618-dd9f-4550-82f2-5a5153df4c32",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WestAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af406851-9e0c-4b59-8292-0062c5396c37",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadSouth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d68a9e7-1ab9-413d-8d89-5f33ed1aa256",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25489957-fdd5-46d5-b514-3db8714d3058",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadEast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "908d9517-3248-4a89-95aa-9f22026ed904",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96c4d501-e3d0-48b2-bf25-1112c74914da",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftBackBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03b389df-ebcf-46d1-970f-52269e7df129",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightBackBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c5137f6-34d0-4518-a949-bd124a4dd2bf",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFrontBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04f7b9a0-11a6-49b8-8cff-115a2c488a20",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFrontBumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51c1909a-1958-4c1d-9c26-91db810215e0",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Options",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}